# rosbag_utils

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: tf_prefix.launch  undensif.launch
scripts/: add_baseline_gt.py  add_tf_prefix.py  change_global_tf.py  change_siar_global_tf.py  change_t.py  change_tf_bag.py  change_tf_topic.py  concat_bag.py  correct_tf.py  filter_unwanted_topics.sh  merge_bag.py  short.sh  shorten_bag.py
src/: export_path_to_graph.cpp
test/: optimized_path
