<?xml version="1.0"?>
<package>
  <name>rosbag_utils</name>
  <version>0.0.0</version>
  <description>The rosbag_utils package</description>

  <maintainer email="daletei@upo.es">chur</maintainer>


  <license>MIT</license>


  <build_depend>rosbag</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libelium_waspmote_gas_node</build_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libelium_waspmote_gas_node</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>


